<resources>
    <string name="app_name">Calculator_GB</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="sum">+</string>
    <string name="min">-</string>
    <string name="multiply">*</string>
    <string name="division">/</string>
    <string name="equality">=</string>
    <string name="point">.</string>
    <string name="clear">Clear</string>
    <string name="procent">%</string>
    <string name="enter_num">Поле ввода</string>
    <string name="result">Результат</string>
    <string name="default_theme">Default theme</string>
    <string name="red_theme">Red theme</string>
    <string name="green_theme">Green theme</string>
    <string name="blue_theme">Blue theme</string>
    <string name="setTheme">Выбор темы</string>
</resources>