<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radioButtons"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/fon"
    android:orientation="vertical">

<RadioGroup
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioButtonMaterialDefault"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/layout_marginTop"
        android:background="@color/field"
        android:text="@string/default_theme" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioButtonMaterialRed"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/red_300"
        android:text="@string/red_theme" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioButtonMaterialGreen"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/green_300"
        android:text="@string/green_theme" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioButtonMaterialBlue"
        android:layout_width="@dimen/layout_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/blue_300"
        android:text="@string/blue_theme" />
    </RadioGroup>

</LinearLayout>